--- a/stylesheets/indexstyle.css
+++ b/stylesheets/indexstyle.css
@@ -1,15 +1,19 @@
-html {
+/* html {
 	background-image: url("../imgs/side.png");
 	background-repeat: no-repeat;
 	background-size: auto;
-}
+} */
 
 .blurb {
 	margin-left:15%;
-	margin-top: 12%;
-	margin-bottom: 3%;
+	margin-top: 15%;
+	margin-bottom: 5%;
 }
 
+nav {
+	position: fixed;
+	top:0px;
+}
 
 nav ul{
 	list-style-type: none;
@@ -30,9 +34,9 @@ nav a {
     color: lightgray;
     text-align: left;
     text-decoration: none;
-    width:120px;
-    padding-top:5%;
-    padding-bottom: 5%;
+    width:180px;
+    padding-top:3%;
+    padding-bottom: 3%;
 }
 
 nav a:hover {
@@ -43,16 +47,30 @@ nav a:hover {
 	display: inline;
 	margin-left: 15%;
 	margin-top:5%;
+	opacity: 0.7;
 }
 
 .icons div {
 	display: inline;
 	width:40px;
 	height: 40px;
-
 }
 
 .content {
 	width:40%;
 	display: block;
 }
+
+.background {
+	width:100%;
+	height:600px;
+}
+
+.below {
+	height:800px;
+	width:400px;
+	background-color: lightgray;
+	margin:30px;
+
+}
+
