--- a/stylesheets/indexstyle.css
+++ b/stylesheets/indexstyle.css
@@ -10,38 +10,6 @@
 	margin-bottom: 5%;
 }
 
-nav {
-	position: fixed;
-	top:0px;
-}
-
-nav ul{
-	list-style-type: none;
-	overflow: hidden;
-	background-color: #3f3f3f;
-	border-radius: 3px;
-
-
-}
-
-nav li {
-	float:left;
-	
-}
-
-nav a {
-	display: block;
-    color: lightgray;
-    text-align: left;
-    text-decoration: none;
-    width:180px;
-    padding-top:3%;
-    padding-bottom: 3%;
-}
-
-nav a:hover {
-	color:white;
-}
 
 .icons {
 	display: inline;
@@ -63,14 +31,14 @@ nav a:hover {
 
 .background {
 	width:100%;
-	height:600px;
+	height:400px;
 }
 
 .below {
 	height:800px;
-	width:400px;
+	width:100%;
 	background-color: lightgray;
-	margin:30px;
+	margin:bottom 30px;
 
 }
 
