--- a/stylesheets/nav.css
+++ b/stylesheets/nav.css
@@ -11,7 +11,6 @@ nav ul{
 	border-radius: 3px;
 	width:100%;
 
-
 }
 
 nav li {
@@ -31,4 +30,14 @@ nav a {
 
 nav a:hover {
 	color:white;
+}
+
+#logo {
+	position:fixed;
+	top:-19px;
+	right:5%;
+	margin-top: 0px;
+	color:gray;
+	clear:right;
+	float:right;
 }
