--- a/stylesheets/contactstyle.css
+++ b/stylesheets/contactstyle.css
@@ -1,9 +1,9 @@
 .content {
   width:60%;
-  height:40;
+  height:40%;
   margin-top:20%;
   margin-left:20%;
-  padding:20%;
+  padding:10%;
   background-color:gray;
   opacity:.5;
 }
