--- a/stylesheets/contactstyle.css
+++ b/stylesheets/contactstyle.css
@@ -2,7 +2,8 @@
   width:60%;
   height:40%;
   margin-top:20%;
-  margin-left:20%;
+  margin-left:15%;
+  margin-right:15%;
   padding:10%;
   background-color:gray;
   opacity:.5;
