--- a/stylesheets/contactstyle.css
+++ b/stylesheets/contactstyle.css
@@ -1,10 +1,43 @@
 .content {
+	display: block;
   width:60%;
-  height:40%;
-  margin-top:15%;
+  height:60%;
+  margin-top:10%;
   margin-left:15%;
-  margin-right:15%;
-  padding:10%;
+  padding:5%;
   background-color:gray;
-  opacity:.5;
+  opacity:.8;
+}
+
+.content a {
+	text-decoration: none;
+	color: black;
+}
+
+.content p {
+	padding-bottom: 10%;
+	line-height: 180%;
+}
+
+.background {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	opacity:.3;
+	width:100%;
+	height:100%;
+}
+
+.icons {
+	display: inline;
+	margin-left: 80%;
+	margin-top:90%;
+	opacity: 0.7;
+}
+
+.icons div {
+	display: inline;
+	width:40px;
+	height: 40px;
 }
