--- a/stylesheets/contactstyle.css
+++ b/stylesheets/contactstyle.css
@@ -56,7 +56,7 @@ input {
 	padding:2%;
 	margin:2%;
 	border-radius:1%;
-	width:60%;
+	width:50%;
 }
 
 textarea {
@@ -65,4 +65,8 @@ textarea {
 	margin:2%;
 	border-radius:1%;	
 	width:60%;
+}
+
+#userSend {
+	width:20%;
 }
