--- a/stylesheets/contactstyle.css
+++ b/stylesheets/contactstyle.css
@@ -49,7 +49,7 @@
 	background-color:lightgray;
 	padding:2%;
 	margin-bottom:5%;
-	
+	border:none;
 }
 
 input {
@@ -58,6 +58,8 @@ input {
 	margin:2%;
 	border-radius:1%;
 	width:60%;
+	border:none;
+	color:gray;
 }
 
 textarea {
@@ -65,9 +67,14 @@ textarea {
 	padding:2%;
 	margin:2%;
 	border-radius:1%;	
+	resize:none;
 	width:60%;
+	border:none;
+	color:gray;
 }
 
 #userSend {
 	width:20%;
+	border:none;
+	background-color:mediumgray;
 }
