--- a/stylesheets/aboutstyle.css
+++ b/stylesheets/aboutstyle.css
@@ -1,10 +1,27 @@
-.content {
-  width:60%;
-  height:40%;
-  margin-top:15%;
-  margin-left:15%;
-  margin-right:15%;
-  padding:10%;
-  background-color:gray;
-  opacity:.5;
+.image {
+  opacity: 1;
+  padding:2;
+  display:inline-block;
+  position:relative;
+  left:10%;
+  margin-top: 10%;
+  height: 100%;
+  width: 35%;
+  clear:both;  
 }
+
+
+.content {
+  width:25%;
+  height:48%;
+  position:absolute;
+  margin-top:10%;
+  margin-left:15%;
+  padding:5%;
+  color:#333333;
+  opacity:1;
+  display: inline-block;
+  clear:both;
+  background-color:#e3e3e3;
+}
+
