--- a/stylesheets/contactstyle.css
+++ b/stylesheets/contactstyle.css
@@ -2,16 +2,17 @@
 	display: block;
   width:60%;
   height:60%;
-  margin-top:7%;
+  margin-top:10%;
   margin-left:15%;
   padding:3%;
-  background-color:gray;
-  opacity:.8;
+  background-color:#d3d3d3;
+  opacity:1;
+  color:#333333;
 }
 
 .content a {
 	text-decoration: none;
-	color: black;
+	color: #333333;
 }
 
 .content p {
@@ -25,7 +26,7 @@
 	top: 0;
 	left: 0;
 	z-index: -1;
-	opacity:.3;
+	opacity:.1;
 	width:100%;
 	height:100%;
 }
@@ -35,7 +36,7 @@
 	margin-left: 80%;
 	margin-top:90%;
 	padding-top:5%;
-	opacity: 0.7;
+	opacity: 1;
 }
 
 .icons div {
@@ -46,10 +47,14 @@
 
 .emailme {
 	display: block;
-	background-color:lightgray;
+	background-color:#e5e5e5;
 	padding:2%;
 	margin-bottom:5%;
 	border:none;
+}
+
+::-webkit-input-placeholder {
+   color: gray;
 }
 
 input {
@@ -59,7 +64,7 @@ input {
 	border-radius:1%;
 	width:60%;
 	border:none;
-	color:gray;
+	color:#333333;
 }
 
 textarea {
@@ -70,11 +75,12 @@ textarea {
 	resize:none;
 	width:60%;
 	border:none;
-	color:gray;
+	color:#333333;
 }
 
 #userSend {
 	width:20%;
 	border:none;
 	background-color:white;
+	color:#333333;
 }
