--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,9 +1,12 @@
 * {
 	font-family: Arial, Helvetica, Sans-Serif;
-	font-color:#3f3f3f;
+	color:#333333;
+	border-radius: 3px;
+	line-height: 140%;
 }
 
 h1 {
 	font-size: 3em;
 }
+
 
