--- a/stylesheets/aboutstyle.css
+++ b/stylesheets/aboutstyle.css
@@ -1,27 +1,34 @@
-.image {
-  opacity: 1;
-  padding:2;
-  display:inline-block;
-  position:relative;
-  left:10%;
+.boundry {
+  background-color: white;
+  position:absolute;
+  margin-left: 10%;
   margin-top: 10%;
-  height: 100%;
-  width: 35%;
-  clear:both;  
+  height:466px;
+  width:80%;
+  
+}
+
+
+.image {
+  position: relative;
+  top:0px;
+  bottom:0px;
+  right:0px;
+  left:0px;
+  display:inline-block;
 }
 
 
 .content {
-  width:25%;
-  height:48%;
-  position:absolute;
-  margin-top:10%;
-  margin-left:15%;
+  position: absolute;
+  right:0px;
+  left:45%;
+  top:0px;
+  bottom:0px;
   padding:5%;
   color:#333333;
   opacity:1;
   display: inline-block;
-  clear:both;
   background-color:#e3e3e3;
 }
 
