--- a/stylesheets/indexstyle.css
+++ b/stylesheets/indexstyle.css
@@ -30,8 +30,14 @@
 }
 
 .background {
-	width:100%;
-	height:400px;
+	background: url(../imgs/side_2.png);
+	background-size: cover;
+	position:absolute;
+	bottom:0px;
+	right:0px;
+	left:0px;
+	width:110%;
+	height:50%;
 }
 
 .below {
