--- a/stylesheets/workstyle.css
+++ b/stylesheets/workstyle.css
@@ -43,3 +43,10 @@
   background-size:cover;
   background-position: center;
 }
+
+h6 {
+  color: blue;
+  clear:both;
+  display: fixed;
+  margin:0;
+}
